Update to 1.21.1, Add NeoForge Co-authored-by: Corgi Taco <66983020+corgitaco@users.noreply.github.com>
Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>